Enhance hacker-style export UI

--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,7 @@
             </form>
 
             <div id="status" class="status status--idle" data-i18n="status.idle">Waiting for URL...</div>
+            <div id="run-feedback" class="run-feedback" hidden aria-live="polite"></div>
           </section>
 
           <section class="panel reveal">
